--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Design dirigido à domínio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.2.3",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/node": "^20.2.5",
+    "eslint": "^8.41.0",
     "typescript": "^5.0.4",
     "vitest": "^0.31.1"
   }
