--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,12 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.2.5",
     "eslint": "^8.41.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
     "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.31.1"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.8"
   }
 }
